<resources>
    <string name="app_name">InformatikaVote</string>
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="kandidat_1">Kandidat Pertama</string>
    <string name="pilih">PILIH KANDIDAT 1</string>
    <string name="nama_ketua_kd1">Ketua Kandidat</string>
    <string name="nama_wakil_kd1">Wakil Ketua</string>
    <string name="visi">Visi</string>
    <string name="misi">Misi</string>
    <string name="pilih_dua">Pilih Kandidat 2</string>
    <string name="content_misi">Di artikel saya yang sebelum nya pernah membuat bagaimana memasukan text dan belajar tentang layouting pada android studio,nah pada artikel saya yang sekarang akan menunjukan bagaimana cara memasukan gambar pada android studio.ikuti langkah langkah berikut:
    Di artikel saya yang sebelum nya pernah membuat bagaimana memasukan text dan belajar tentang layouting pada android studio,nah pada artikel saya yang sekarang akan menunjukan bagaimana cara memasukan gambar pada android studio.ikuti langkah langkah berikut:
        Di artikel saya yang sebelum nya pernah membuat bagaimana memasukan text dan belajar tentang layouting pada android studio,nah pada artikel saya yang sekarang akan menunjukan bagaimana cara memasukan gambar pada android studio.ikuti langkah langkah berikut:
    </string>
    <string name="content_misi_2">Di artikel saya yang sebelum nya pernah membuat bagaimana memasukan text dan belajar tentang layouting pada android studio,nah pada artikel saya yang sekarang akan menunjukan bagaimana cara memasukan gambar pada android studio.ikuti langkah langkah berikut:
    Di artikel saya yang sebelum nya pernah membuat bagaimana memasukan text dan belajar tentang layouting pada android studio,nah pada artikel saya yang sekarang akan menunjukan bagaimana cara memasukan gambar pada android studio.ikuti langkah langkah berikut:
        Di artikel saya yang sebelum nya pernah membuat bagaimana memasukan text dan belajar tentang layouting pada android studio,nah pada artikel saya yang sekarang akan menunjukan bagaimana cara memasukan gambar pada android studio.ikuti langkah langkah berikut:
    </string>
    <string name="himakom">HIMAKOM</string>
    <string name="e_voting">E-VOTING</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="voting">Voting</string>
    <string name="id">ID</string>
    <string name="logout">Logout</string>
</resources>
